# programmieren_2_aufgabe_2-4

./: README.md  intaractive_plot.py  interactiv_plot.py  main.py  pyproject.toml  read_data.py  read_pandas.py  sort.py
